--- a/src/main/resources/com/example/bdmaven/Menu.fxml
+++ b/src/main/resources/com/example/bdmaven/Menu.fxml
@@ -4,13 +4,12 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuController">
    <children>
       <Label layoutX="37.0" layoutY="23.0" text="Table Menu" />
       <Button layoutX="27.0" layoutY="61.0" mnemonicParsing="false" text="Transactions" />
       <Button layoutX="275.0" layoutY="106.0" mnemonicParsing="false" text="Items" />
-      <Button layoutX="27.0" layoutY="153.0" mnemonicParsing="false" text="Item Details" />
+      <Button layoutX="27.0" layoutY="153.0" mnemonicParsing="false" onAction="#listitemdetails" text="Item Details" />
       <Button layoutX="27.0" layoutY="251.0" mnemonicParsing="false" text="Discount" />
       <Button layoutX="275.0" layoutY="251.0" mnemonicParsing="false" text="Employees" />
       <Button layoutX="275.0" layoutY="61.0" mnemonicParsing="false" text="Kategori" />
