--- a/src/main/resources/com/example/bdmaven/formItemDetails.fxml
+++ b/src/main/resources/com/example/bdmaven/formItemDetails.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bdmaven.formItemDetailsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.formItemDetailsController">
    <children>
       <Label layoutX="37.0" layoutY="23.0" text="Form Item Details" />
       <TextField fx:id="txtAmount" layoutX="150.0" layoutY="61.0" />
