--- a/src/main/resources/com/example/bdmaven/formDelivery.fxml
+++ b/src/main/resources/com/example/bdmaven/formDelivery.fxml
@@ -17,7 +17,6 @@
   </rowConstraints>
    <children>
       <TextField fx:id="deliveryId" prefHeight="40.0" prefWidth="175.0" GridPane.columnIndex="1" />
-      <TextField fx:id="tanggalPengembalian" prefHeight="40.0" prefWidth="175.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <TextField fx:id="employeeId" prefHeight="40.0" prefWidth="175.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Label text="Delivery_id:" GridPane.halignment="CENTER">
          <font>
@@ -39,9 +38,10 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="86.0" text="Save" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+      <Button mnemonicParsing="false" onAction="#addData" prefHeight="50.0" prefWidth="86.0" text="Save" GridPane.halignment="CENTER" GridPane.rowIndex="3">
          <font>
             <Font size="21.0" />
          </font></Button>
+      <DatePicker fx:id="tanggalPengembalian" prefHeight="40.0" prefWidth="175.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
    </children>
 </GridPane>
