--- a/src/main/resources/com/example/bdmaven/Menu.fxml
+++ b/src/main/resources/com/example/bdmaven/Menu.fxml
@@ -10,12 +10,12 @@
       <Button layoutX="275.0" layoutY="106.0" mnemonicParsing="false" text="Items" />
       <Button layoutX="27.0" layoutY="153.0" mnemonicParsing="false" onAction="#listitemdetails" text="Item Details" />
       <Button layoutX="27.0" layoutY="251.0" mnemonicParsing="false" text="Discount" />
-      <Button layoutX="275.0" layoutY="251.0" mnemonicParsing="false" text="Employees" />
+      <Button layoutX="275.0" layoutY="251.0" mnemonicParsing="false" onAction="#employee" text="Employees" />
       <Button layoutX="275.0" layoutY="61.0" mnemonicParsing="false" text="Kategori" />
       <Button layoutX="27.0" layoutY="106.0" mnemonicParsing="false" onAction="#customer" text="Customers" />
       <Button layoutX="275.0" layoutY="153.0" mnemonicParsing="false" text="Payment" />
       <Button layoutX="27.0" layoutY="200.0" mnemonicParsing="false" onAction="#delivery" text="Delivery" />
       <Button layoutX="275.0" layoutY="200.0" mnemonicParsing="false" text="Harga Delivery" />
-      <Button layoutX="27.0" layoutY="295.0" mnemonicParsing="false" text="Jobs" />
+      <Button layoutX="27.0" layoutY="295.0" mnemonicParsing="false" onAction="#jobs" text="Jobs" />
    </children>
 </AnchorPane>
