--- a/src/main/resources/com/example/bdmaven/showTotalTransaction.fxml
+++ b/src/main/resources/com/example/bdmaven/showTotalTransaction.fxml
@@ -3,30 +3,33 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TransactionTotalController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="queryController.TransactionTotalController">
    <children>
-      <Label fx:id="label" prefHeight="113.0" prefWidth="143.0" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+      <Label fx:id="label" layoutX="278.0" layoutY="216.0" prefHeight="113.0" prefWidth="143.0" text="Label">
          <font>
             <Font size="41.0" />
          </font>
       </Label>
-      <Button mnemonicParsing="false" onAction="#back" text="Back" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-      <ChoiceBox fx:id="choicebox1" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-      <ChoiceBox fx:id="choicebox2" prefWidth="150.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+      <Button layoutX="86.0" layoutY="482.0" mnemonicParsing="false" onAction="#back" text="Back" />
+      <ChoiceBox fx:id="choicebox1" layoutX="244.0" layoutY="482.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="choicebox2" layoutX="482.0" layoutY="482.0" prefWidth="150.0" />
+      <Label fx:id="total" layoutX="70.0" layoutY="80.0" text="Total Penjualan">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="298.0" layoutY="458.0" text="Month">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="543.0" layoutY="458.0" text="Year">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
    </children>
-</GridPane>
+</AnchorPane>
